# wordpress-audit

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: analyze.rs  error.rs  lib.rs  main.rs  output.rs  scanner.rs
